--- a/basyx.components/basyx.components.databridge/basyx.components.databridge.camel-aas/pom.xml
+++ b/basyx.components/basyx.components.databridge/basyx.components.databridge.camel-aas/pom.xml
@@ -16,6 +16,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub OWNER Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/Gradiant/SI-DIGITAL-TWIN-basyx-java-components</url>
+		</repository>
+	</distributionManagement>
 
 	<dependencyManagement>
 		<dependencies>
