--- a/basyx.components/basyx.components.databridge/basyx.components.databridge.transformer.camel-jsonata/pom.xml
+++ b/basyx.components/basyx.components.databridge/basyx.components.databridge.transformer.camel-jsonata/pom.xml
@@ -9,7 +9,13 @@
 	<description>Camel Jsonata Integration from internal camel component	</description>
 
 	<packaging>jar</packaging>
-
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub OWNER Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/Gradiant/SI-DIGITAL-TWIN-basyx-java-components</url>
+		</repository>
+	</distributionManagement>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
